[package]
name = "AAAAAAAA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "0.2.6"
axum = "0.6.18"
configparser = "3.0.2"
lazy_static = "1.4.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.8"

[dev-dependencies]
axum-macros = "0.3.7"
