[package]
name = "AAAAAAAA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
async_once = "0.2.6"
axum = "0.6.18"
configparser = "3.0.2"
lazy_static = "1.4.0"
time = "0.3.22"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.8", features = ["with-time-0_3"] }

[dev-dependencies]
axum-macros = "0.3.7"
